app/assets/stylesheets/custom.css.scss
/*limited reset*/
* {
	margin: 0;
	padding: 0;
	border: 0;
	vertical-align:baseline;
	font: inherit;
}

/*html5 display rule*/
address, article, aside, canvas, details, figcaption, figure, footer, header, hgroup, nav, menu, section, summary {
	display: block;
}

// ********** main tag settings

html, body, section{
    height: 100%;
}

body > section {
	height: auto;
	min-height: 100%;
}

body {
	font-family: 'Open Sans', Helvetica, Arial, sans-serif;
	background: $pageBackground;
	color: $mainColor;
	max-width: 1300px;
	margin: 0 auto;	
}

header {
  padding-top: 2%;
  margin: 0 10%;
}

section {
  margin: 1% 10%;
  height: 100%;
}

h1 {
	font-size: 1.3em;
	color: $highlightColor;
	margin-bottom: .5em;
}

h2 {
	color: $highlightColor;
	margin-bottom: .5em;
}

p {
	margin-bottom: 1em;
}

ul {
	list-style-position: outside;
	margin: 0 0 1em 2em;
}

ol {
	list-style-position: outside;
	margin: 0 0 1em 2em;
}

a.clickCall{
	text-decoration: none;
	color: $highlightColor;
}

.clearboth {
	clear: both;
}

footer {
	clear: both;
	font-size: .8em;
	color: $highlightColor;
	margin: 5% 10%;
	text-align: center;
	bottom: 0;
	left: 0;
	position: relative;

}
// for email addresses. reverse and unicode 
.code {
    direction: rtl;
    unicode-bidi: bidi-override;
}

// ********* end main tag settings *****


//  ****** logo and header styles *******

.headIntro {
	font-family: 'Kameron', serif;
}

.headDesc, .headPhone {
	text-align: center;	
	opacity: 0.7;
	font-size: 1.6em;
	line-height: 1.1em;
	color: $highlightColor;
} 

.headDesc{
	float: left;
	.rehab { padding-top: 1.3em;}
}

.headLogo {
	text-align: center;
	img {width: 200px;}
}

.headDesc a, .headDesc a:visited, .headDesc a:hover{
	text-decoration: none;
	color: $highlightColor;
}

.headPhone {
	float: right;
	.headNum{ 
		padding-top: 1.3em;
		a.clickCall, a.clickCall:visited, a.clickCall:hover {
			text-decoration: none;
			color: $highlightColor;
		}
	}
	.headHour {
		font-size: .6em;
		line-height: 1.1em;
}
}

// ************ end logo and header *********

// ***************** menu  ***************
.menuLine{
	clear: both;
	border-bottom: .2em solid $highlightColor;
	margin-bottom: -1.15em;
	margin-top: 1.5em;
}

nav {
	clear: both;
	text-align: center;
	font-size: .95em;
}

#menu{
	margin: 0 auto;
	padding: 0 2em;
	list-style: none;
	display: inline-block;	
	width: 60%;	
}

.cms #menu {
	background-color: $pageBackground;	
}

#menu li{
	float: left;
	padding: 0 0 0 0;
	position: relative;
	width:25%;
}

#menu a{
	line-height: 2em;
	padding: 0.4em 1em;		
	text-decoration: none;
}

.cms #menu a {
	color: $highlightColor;
//	text-transform: uppercase;
}

.homepage #menu a {
	color: $logoColor;
//	text-transform: lowercase;
}

// remove home from menu
#menu li:first-child {
	display: none;
}

#menu li:hover > a{
	text-decoration: none;
	background: $lightGrey;
	@include rounded(.3em);
}

#menu li:hover > ul{
	display: block;

}

/* Sub-menu */

#menu ul{
  list-style: none;
  margin: 0;
  padding: 0;    
  display: none;
  position: absolute;
  left: 0;
  z-index: 99999;   
  background: $lightGrey; 

  @include rounded (.5em)
}

#menu ul li{
  float: none;
  margin: 0;
  padding: 0;
  width: 100%;
  text-align: left;
}

#menu ul a{    
  height: auto;
  line-height: 1.5em;
  display: block;
  white-space: nowrap;
  float: none;
}

.cms #menu ul a {
	text-transform: none;
}

.homepage #menu ul a {
	text-transform: none;
}

*:first-child+html #menu ul a{ /* IE7 */    
	height: 10px;
	width: 150px;
}

.cms #menu ul a:hover{
  background: $highlightColor;
  color: white;
  display: block;
}

.homepage #menu ul a:hover{
  background: $logoColor;
  color: white;
}
#menu ul li:first-child a{
    -moz-border-radius: 5px 5px 0 0;
    -webkit-border-radius: 5px 5px 0 0;
    border-radius: 5px 5px 0 0;
}

#menu ul li:last-child a{
    -moz-border-radius: 0 0 5px 5px;
    -webkit-border-radius: 0 0 5px 5px;
    border-radius: 0 0 5px 5px;
}

/* Clear floated elements */
#menu:after{
	visibility: hidden;
	display: block;
	font-size: 0;
	content: " ";
	clear: both;
	height: 0;
}


*:first-child+html #menu { zoom: 1; } /* IE7 */

// highlights menu navigation for selected page

#center #center-nav, #programs #programs-nav, #about #about-nav, #contact #contact-nav {
	text-decoration: underline;
} 

// ************ end menu ****************

// ************ homepage  ***********
.homepage {
  background: url(asset-path("beachside-rehab.jpg", image) ) no-repeat center center fixed; 
  -webkit-background-size: cover;
  -moz-background-size: cover;
  -o-background-size: cover;
  background-size: cover;	
}

.homeNav {
	padding-top: 2em;

}
.homeContentBox {
	background: $pageBackground;
	opacity: .5;
	height: 20em;
	margin: 10% 20%;
	
}
.homeContent {
	position: relative;
	margin: 0 20%;
	text-align: center;	
	top: -23em;
	h1 {
		font-family: 'Kameron', serif;
		color: $logoColor;
	 	font-size: 3em;
	 	margin-bottom: 0em;
	 	a, a:hover, a:visited {
	 		text-decoration: none;
	 		color: $logoColor;
	 	}
	}
	.homePhone {
		margin-top: 1em;
	}
	.homePhone a.clickCall {
		font-family: 'Kameron', serif;
		color: $logoColor;
		font-size: 2.5em;
		text-decoration: none;
	}
	.homeLocation a, .homeLocation a:hover,.homeLocation a:visited, {
		color: $mainColor;
		text-decoration: none;
	} 
	.homeIns{
		margin-top: 2em;
		font-size: .8em;
		color: $mainColor;
		a, a:hover, a:visited {
			color: $mainColor;
			text-decoration: none;
		}
	}
	.homeInsLogo{
		margin-top: 1.5em;
		img {padding: 0 .5em;}
	}
}
// *********** end homepage *******

#breadcrumb {
	font-size: .7em;
	color: $highlightColor;
}
#breadcrumb ul {
	list-style: none;
	padding: 0;
	margin: 0;
}

#breadcrumb li {
	float: left;
	padding: 0 .3em;
}

#breadcrumb {
	a, a:hover, a:visited  {
		color: $highlightColor;
		text-decoration: underline;
	}
}

#breadcrumb .breadLast {
	color: $mainColor;
}
// ************** breadcrumb *******


// ************** end breadcrumb *******

// ************* other styling *******
// styles the FAQ's
#about ol > li {
	color: $highlightColor;
}

// ************* end other styling *******

